syntax = "proto3";

package pkg;

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string greeting = 1;
}

service HelloService {
  rpc SayHello(HelloRequest) returns (HelloReply) {}
  rpc SayBye(HelloRequest) returns (HelloReply) {}
}

